--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule ".dotfiles"]
-	path = .dotfiles
-	url = https://github.com/masa-310/.dotfiles.git
+[submodule "dotfiles"]
+	path = dotfiles
+	url = https://github.com/masa-310/dotfiles.git
